-- Dimension: Customer (includes classification)
CREATE TABLE DIM_CUSTOMER (
  C_CUSTKEY    INTEGER PRIMARY KEY,
  C_NAME       TEXT,
  C_ADDRESS    TEXT,
  C_NATIONKEY  INTEGER,
  C_PHONE      TEXT,
  C_ACCTBAL    REAL,
  C_MKTSEGMENT TEXT,
  C_CLASSIFICATION TEXT,
  C_COMMENT    TEXT
);

-- Dimension: Part
CREATE TABLE DIM_PART (
  P_PARTKEY  INTEGER PRIMARY KEY,
  P_NAME     TEXT,
  P_MFGR     TEXT,
  P_BRAND    TEXT,
  P_TYPE     TEXT,
  P_SIZE     INTEGER,
  P_CONTAINER TEXT,
  P_RETAILPRICE REAL,
  P_COMMENT  TEXT
);

-- Dimension: Supplier
CREATE TABLE DIM_SUPPLIER (
  S_SUPPKEY   INTEGER PRIMARY KEY,
  S_NAME      TEXT,
  S_ADDRESS   TEXT,
  S_NATIONKEY INTEGER,
  S_PHONE     TEXT,
  S_ACCTBAL   REAL,
  S_COMMENT   TEXT
);

-- Dimension: Date
CREATE TABLE DIM_DATE (
  DATE TEXT PRIMARY KEY,
  DAY INTEGER,
  MONTH INTEGER,
  YEAR INTEGER,
  FIN_YEAR INTEGER
);

-- Fact Table: Sales
CREATE TABLE FACT_SALES (
  ORDER_KEY      INTEGER PRIMARY KEY,
  CUSTOMER_KEY   INTEGER,
  ORDER_DATE     TEXT,
  SHIP_DATE      TEXT,
  PART_KEY       INTEGER,
  SUPPLIER_KEY   INTEGER,
  QUANTITY       INTEGER,
  EXTENDED_PRICE REAL,
  DISCOUNT       REAL,
  REVENUE        REAL,
  SHIP_MODE      TEXT,
  FOREIGN KEY (CUSTOMER_KEY) REFERENCES DIM_CUSTOMER(C_CUSTKEY),
  FOREIGN KEY (PART_KEY) REFERENCES DIM_PART(P_PARTKEY),
  FOREIGN KEY (SUPPLIER_KEY) REFERENCES DIM_SUPPLIER(S_SUPPKEY)
);
